Fix initialization of the gradient button's thumbnail

If the gradient selector has the tag-filtering enabled, then
the default Fg-to-Transparent gradient will not be available
on startup. Hence we should enable it on the global canvas
resource manager separately and accept that the gradient
chooser will not have anything selected at all.

BUG:506769